# ntd

./: .gitignore  LICENSE  README.md  entries.txt  makefile  tmp.txt
include/: todo.h
src/: CMakeLists.txt  app.c  entry.c  ncurses.c  test.c  todo.c  todo.h  util.c
